# EthiliaChatbot

./: .briefcaseignore  briefcase_build.sh  codemagic.yaml  fix_build_yaml.sh  fix_ethilia_repo.sh  makefile  pyproject.toml
ethilia/: CHANGELOG  LICENSE  README.rst  briefcase_build.sh  codemagic.yaml
ethilia/ethilia/: __main__.py
ethilia/ethilia/src/ethilia/: app.py  chatbot.py
