# pyproject.toml

[tool.briefcase]
project_name = "Ethilia"
bundle = "com.ethilia"
version = "1.0.0"
description = "A simple AI chat app powered by Ethilia."
author = "CJ"
author_email = "getfukd4269@gmail.com"
url = "https://github.com/CJ420184736/EthiliaChatbot"
license = { file = "LICENSE" }

[tool.briefcase.app.ethilia]
formal_name = "Ethilia"
description = "The Ethilia chatbot"
sources = ["ethilia/ethilia"]
icon = "icons"
version = "1.0.0"
bundle = "com.ethilia"
package = "ethilia"
app_name = "ethilia"
requires = ["toga", "openai"]

[tool.briefcase.app.ethilia.macOS]
requires = ["toga-cocoa"]

[tool.briefcase.app.ethilia.linux]
requires = ["toga-gtk"]

[tool.briefcase.app.ethilia.windows]
requires = ["toga-winforms"]

[tool.briefcase.app.ethilia.android]
requires = ["toga-android"]
android_arch = ["armeabi-v7a", "arm64-v8a"]
target_sdk = 33

[build-system]
requires = ["briefcase"]
build-backend = "briefcase.build"
